# users

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  ruff.toml
.github/workflows/: ci-cd.yaml
app/: main.py
app/application/common/: event_bus.py  exception.py  identity_provider.py  unit_of_work.py
app/application/common/dto/: user_dto.py
app/application/common/persistence/: user_gateway.py
app/application/operations/command/: change_address.py  change_bio.py  change_contacts.py  change_fullname.py  change_social_network_connection_reason.py  change_username.py  create_user.py  delete_user_permanently.py  delete_user_temporarily.py  link_social_netrwork.py  link_social_network.py  recovery_user.py  remove_avatar.py  unlink_social_network.py
app/application/operations/query/: get_user_by_id.py
app/domain/common/: event.py  unit_of_work.py  uowed_entity.py
app/domain/shared/: base_entity.py  event.py  exception.py  unit_of_work.py  uowed_entity.py
app/infrastructure/: config.py
app/infrastructure/brokers/: message.py  publisher.py
app/infrastructure/common/: ioc.py
app/infrastructure/event_bus/: converters.py  event_bus.py
app/main/: entrypoint.py
app/main/di/: ioc.py  main.py  provide_dependencies.py  providers.py
app/presentation/api/: exc_handlers.py  main.py
conf/: app_config.toml  gunicorn_configuration.py
monitoring/: README.MD
tests/mocks/: database.py  event_bus.py  identity_provider.py  registry.py  unit_of_work.py  user_mappers.py  user_repository.py
tests/unit/: conftest.py
(+188 files in other folders)
