[project]
name = "users"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "dishka>=1.4.2",
    "fastapi>=0.115.6",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
    "alembic>=1.14.0",
    "faststream[rabbit]>=0.5.33",
    "pytest-asyncio>=0.25.1",
    "gunicorn>=23.0.0",
]
